Fix landing page text alignment

--- a/frontend/src/pages/LandingScreen/LandingScreen.css
+++ b/frontend/src/pages/LandingScreen/LandingScreen.css
@@ -27,6 +27,7 @@
 #hero-text {
   font-size: 1.5em;
   color: #888;
+  text-wrap: pretty;
 }
 
 .hero-button {
@@ -112,7 +113,7 @@ footer {
 
   #hero-text {
     font-size: 1.1em;
-    text-align: justify;
+    text-align: left;
   }
 
   #hero-image {
@@ -132,7 +133,7 @@ footer {
   }
 
   #features .row > div p {
-    text-align: justify;
+    text-align: left;
   }
 
   #chat {
@@ -149,7 +150,7 @@ footer {
   }
 
   #chat > p {
-    text-align: justify;
+    text-align: left;
   }
 
   #chat-features {
@@ -164,7 +165,7 @@ footer {
 
   #chat-features .row > div p,
   #chat-features > div p {
-    text-align: justify;
+    text-align: left;
   }
 
   footer {
